--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wmr": "^3.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
