--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -9,7 +9,7 @@
     ],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -18,17 +18,21 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
+    "incremental": true
   },
   "files": [
     "./node_modules/wmr/types.d.ts"
   ],
   "include": [
-    "src",
+    "src"
   ],
   "references": [
     {
       "path": "./tsconfig.node.json"
     }
   ],
+  "exclude": [
+    "node_modules"
+  ]
 }
